Fix win clang build

TBR=elawrence@chromium.org

Bug: 761499
Change-Id: Ifc015e77b3ef884a3c9e977ea8622aa4e73bfdf4
Reviewed-on: https://chromium-review.googlesource.com/647778
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Eric Lawrence <elawrence@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499323}
Former-commit-id: 8a62aea7a676b02ef09717aabd7b4213420893fc